--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 <body>
     <div class="container mt-5">
         <h1 class="text-center">To-Do List</h1>
+        <form action="" id="form">
         <div class="input-group mb-3">
             <input type="text" id="taskInput" class="form-control" placeholder="Ajouter une tâche...">
-            <button class="btn btn-primary" id="submit" onclick="ajoutTache()">Ajouter</button>
-            <button class="btn btn-primary" id="edit" style="display: none;">Modifier</button>
+            <button class="btn btn-primary" id="submit">Ajouter</button>
+            <!-- <button class="btn btn-primary" id="edit" style="display: none;">Modifier</button> -->
             
         </div>
-        <ul id="tachesList" class="list-group">
+    </form>
+        <ul id="taskList" class="list-group">
             <!-- List des tâches -->
         </ul>
     </div>
